{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 75,
  "lineage": "86cba8ee-8177-e6fd-a2f5-b5dbad6aa713",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0c59dde782f383e",
            "association_id": "eipassoc-0acfd65429a8ac34e",
            "domain": "vpc",
            "id": "eipalloc-0a0c59dde782f383e",
            "network_border_group": "us-east-2",
            "network_interface": "eni-09f8aa69f1cf820fc",
            "private_dns": "ip-10-0-1-243.us-east-2.compute.internal",
            "private_ip": "10.0.1.243",
            "public_dns": "ec2-18-224-155-153.us-east-2.compute.amazonaws.com",
            "public_ip": "18.224.155.153",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a02eadc6d8770f83",
            "arn": "arn:aws:ec2:us-east-2:885300287765:instance/i-0d80764216b300b42",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d80764216b300b42",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TEST",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a5a275b7ee8322df",
            "private_dns": "ip-10-0-2-180.us-east-2.compute.internal",
            "private_ip": "10.0.2.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 0,
                "kms_key_id": "arn:aws:kms:us-east-2:885300287765:key/e70e7ae4-1cc8-4f42-afbc-c2d154c9e83d",
                "throughput": 0,
                "volume_id": "vol-08c7fc8e89742b050",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "sg-043e5028f83be5be1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-038672d1758e457ce",
            "tags": {
              "Name": "EC2-Private"
            },
            "tags_all": {
              "Name": "EC2-Private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-043e5028f83be5be1"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver-security-group",
            "aws_subnet.main_private"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04bbce71bc531eb30",
            "arn": "arn:aws:ec2:us-east-2:885300287765:instance/i-064c9b1ca7a76f720",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064c9b1ca7a76f720",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TEST",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05452bd7108204f20",
            "private_dns": "ip-10-0-1-106.us-east-2.compute.internal",
            "private_ip": "10.0.1.106",
            "public_ip": "3.145.200.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-2:885300287765:key/e70e7ae4-1cc8-4f42-afbc-c2d154c9e83d",
                "throughput": 0,
                "volume_id": "vol-0c2e480b0f2caf352",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-015ce6992bc310407"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e8f0209d0adaf444",
            "tags": {
              "Name": "EC2-PUBLIC"
            },
            "tags_all": {
              "Name": "EC2-PUBLIC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-015ce6992bc310407"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-security-group",
            "aws_subnet.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:internet-gateway/igw-0a84d6f27d8a2f094",
            "id": "igw-0a84d6f27d8a2f094",
            "owner_id": "885300287765",
            "tags": {
              "Name": "main igw"
            },
            "tags_all": {
              "Name": "main igw"
            },
            "vpc_id": "vpc-016fb7277d0d9ef67"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0c59dde782f383e",
            "connectivity_type": "public",
            "id": "nat-02e7448213696558f",
            "network_interface_id": "eni-09f8aa69f1cf820fc",
            "private_ip": "10.0.1.243",
            "public_ip": "18.224.155.153",
            "subnet_id": "subnet-0e8f0209d0adaf444",
            "tags": {
              "Name": "NAT gw"
            },
            "tags_all": {
              "Name": "NAT gw"
            }
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:route-table/rtb-01c0a39155823caa5",
            "id": "rtb-01c0a39155823caa5",
            "owner_id": "885300287765",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02e7448213696558f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-016fb7277d0d9ef67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:route-table/rtb-0e5d3d247c86330ed",
            "id": "rtb-0e5d3d247c86330ed",
            "owner_id": "885300287765",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a84d6f27d8a2f094",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-016fb7277d0d9ef67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08777026d7f52e291",
            "route_table_id": "rtb-01c0a39155823caa5",
            "subnet_id": "subnet-038672d1758e457ce"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_route_table.PrivateRT",
            "aws_subnet.main",
            "aws_subnet.main_private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5c7f03315d2af44",
            "route_table_id": "rtb-0e5d3d247c86330ed",
            "subnet_id": "subnet-0e8f0209d0adaf444"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.PublicRT",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:security-group/sg-015ce6992bc310407",
            "description": "Enable SSH access on Port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015ce6992bc310407",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SSH Security Group",
            "name_prefix": "",
            "owner_id": "885300287765",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH Security Group"
            },
            "tags_all": {
              "Name": "SSH Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-016fb7277d0d9ef67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:security-group/sg-043e5028f83be5be1",
            "description": "Enable HTTP/HTTPS access on Port 80/443 via ALB and SSH access on Port 22 via SSH SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043e5028f83be5be1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-015ce6992bc310407"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Web Server Security Group",
            "name_prefix": "",
            "owner_id": "885300287765",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server Security Group"
            },
            "tags_all": {
              "Name": "Web Server Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-016fb7277d0d9ef67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ssh-security-group",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:subnet/subnet-0e8f0209d0adaf444",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8f0209d0adaf444",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "885300287765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "vpc_id": "vpc-016fb7277d0d9ef67"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:subnet/subnet-038672d1758e457ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038672d1758e457ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "885300287765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main.Private"
            },
            "tags_all": {
              "Name": "Main.Private"
            },
            "vpc_id": "vpc-016fb7277d0d9ef67"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:vpc/vpc-016fb7277d0d9ef67",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dbd9febb3006b089",
            "default_route_table_id": "rtb-08d3e38ad94247569",
            "default_security_group_id": "sg-088255c7ce67f567d",
            "dhcp_options_id": "dopt-0a44ae30c69b8db23",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-016fb7277d0d9ef67",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08d3e38ad94247569",
            "owner_id": "885300287765",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}